# ai_agent_revisao_leteratura

./: .env.example  .gitignore  .mcp.json  Makefile  README.md  pyproject.toml  run_ui.py
.github/: persona-boundaries.md
.github/agents/: data-product-delivery-manager.agent.md
.github/skills/project-delivery-management/: SKILL.md
.github/workflows/: release.yml
docs/: README.md  architecture.md  cli.md  mlflow_guide.md  session_management.md  troubleshooting.md
docs/ui/: planner.md  review_chat.md  visualizer.md  writer.md
learning/: run_writer_test.py
learning/examples/: review_paper.py
mcp-servers/: safe_edit_mcp.py
runtime/reviews/: revisao_tecnica_revisao_tecnica.md
scripts/: generate_cost_report.py  run_baseline_mlflow.py
src/gradio_app/handlers/: base.py  planning.py  review.py  writing.py
src/gradio_app/handlers/review_parts/: document.py  intent.py  references.py
src/revisao_agents/: cli.py  config.py  state.py
src/revisao_agents/agents/: image_suggestion_agent.py  reference_extractor_agent.py  reference_formatter_agent.py
src/revisao_agents/core/: utils.py
src/revisao_agents/core/schemas/: writer_config.py
src/revisao_agents/evaluation/: __init__.py  evaluators.py  snippet_evaluators.py  types.py
src/revisao_agents/graphs/: checkpoints.py
src/revisao_agents/nodes/: technical.py
src/revisao_agents/nodes/writing/: __init__.py  verification.py
src/revisao_agents/observability/: __init__.py  mlflow_config.py  mlflow_tracking.py  search_metrics.py
src/revisao_agents/prompts/: __init__.py
src/revisao_agents/tools/: academic_corpus_search.py  registry.py  tavily_web_search.py
src/revisao_agents/utils/: __init__.py  helpers.py  llm_providers.py
src/revisao_agents/utils/file_utils/: __init__.py  helpers.py
src/revisao_agents/utils/llm_utils/: __init__.py  date_context.py  llm_providers.py
src/revisao_agents/utils/vector_utils/: mongodb_corpus.py  (+1 more)
src/revisao_agents/workflows/: __init__.py  technical_writing_workflow.py
tests/integration/: test_mlflow_session_continuity.py  test_search_metrics_mlflow.py  test_sqlite_checkpoint_resume.py
tests/unit/: conftest.py  test_review_reference_pipeline.py
tests/unit/test_agents/: test_technical.py
tests/unit/test_observability/: test_mlflow.py  test_search_metrics.py
tests/unit/test_scripts/: test_generate_cost_report.py
tests/unit/test_tools/: test_tavily_web_search.py
