[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revisao-agents"
version = "0.2.0"
description = "Sistema agentico para revisão de textos acadêmicos e capítulos técnicos (LangGraph)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "gradio>=4.0.0",
    "langchain>=1.0.0,<2.0.0",
    "langgraph>=1.1.5,<1.2.0",
    "langgraph-checkpoint-sqlite>=1.1.0",
    "aiosqlite>=0.19.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langchain-groq>=1.0.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.3.0",
    "pymongo>=4.5.0",
    "tiktoken>=0.5.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "mlflow[langchain]>=3.10.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "fastmcp>=2.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
revisao-agents = "revisao_agents.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["revisao_agents"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
files = ["src/"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests that require real external services (deselect with '-m not integration')",
]
